# radio

./: .env  .env.example  .env.swp  README.md  example_mpd_usage.py  main.py  pyproject.toml  smart-radio.service  status_server.py  test_mpd_discovery.py
config/: __init__.py  manager.py  mpd.conf
nfc/: __init__.py  scanner.py
openspec/: project.md
openspec/changes/add-nfc-smart-radio/: design.md  proposal.md  tasks.md
openspec/changes/add-nfc-smart-radio/specs/audio-playback/: spec.md
openspec/changes/add-nfc-smart-radio/specs/nfc-interaction/: spec.md
playback/: __init__.py  manager.py
playback/audiobookshelf/: __init__.py  player.py
playback/radio/: __init__.py  player.py
playback/unified/: player.py
services/: __init__.py  mpd_discovery.py
utils/: __init__.py  logger.py
